--- a/views/auth/index.ejs
+++ b/views/auth/index.ejs
@@ -23,7 +23,6 @@
 </head>
 
 <body class="bg-gradient-primary">
-
     <div class="container">
 
         <!-- Outer Row -->
@@ -57,6 +56,9 @@
                                                 <label class="custom-control-label" for="customCheck">Remember
                                                     Me</label>
                                             </div>
+                                        </div>
+                                        <div style="text-align: center; margin: 10px 0;">
+                                            <span style="color: red; font-size: 15px; "><%= message %></span>
                                         </div>
                                         <button type="submit" class="btn btn-primary btn-user btn-block">
                                             Login
