--- a/views/auth/index.ejs
+++ b/views/auth/index.ejs
@@ -58,7 +58,10 @@
                                             </div>
                                         </div>
                                         <div style="text-align: center; margin: 10px 0;">
-                                            <span style="color: red; font-size: 15px; "><%= message %></span>
+                                            <span style="color: red; font-size: 15px; "><%= error %></span>
+                                        </div>
+                                        <div style="text-align: center; margin: 10px 0;">
+                                            <span style="color: red; font-size: 15px; "><%= success %></span>
                                         </div>
                                         <button type="submit" class="btn btn-primary btn-user btn-block">
                                             Login
