--- a/views/admin/pages/category/add.ejs
+++ b/views/admin/pages/category/add.ejs
@@ -1,7 +1,11 @@
-<form method="POST" action="/admin/category" style="width: 70%; margin: auto;">
+<form method="POST" action="/admin/category" style="width: 70%; margin: auto;" enctype="multipart/form-data">
     <div class="mb-3">
       <label class="form-label">Name</label>
       <input type="text" name="name" class="form-control" placeholder="category name">
+    </div>
+    <div class="mb-3">
+      <label class="form-label">Image</label>
+      <input type="file" name="image" class="form-control">
     </div>
     <button type="submit" class="btn btn-primary">Add</button>
 </form>
