--- a/views/admin/pages/product/add.ejs
+++ b/views/admin/pages/product/add.ejs
@@ -1,4 +1,4 @@
-<form method="POST" action="/admin/products" style="width: 70%; margin: auto;">
+<form method="POST" action="/admin/products" style="width: 70%; margin: auto;" enctype="multipart/form-data">
     <div class="mb-3">
       <label class="form-label">Name</label>
       <input type="text" name="name" class="form-control" placeholder="product name">
@@ -13,7 +13,7 @@
     </div>
     <div class="mb-3">
       <label class="form-label">Image</label>
-      <input type="text" name="image" class="form-control" placeholder="image">
+      <input type="file" name="image" class="form-control" placeholder="image">
     </div>
     <div class="mb-3">
       <label class="form-label">Loại sản phẩm</label>
