render static page

--- a/views/admin/layout/main.ejs
+++ b/views/admin/layout/main.ejs
@@ -48,16 +48,25 @@
                         <h6 class="m-0 font-weight-bold text-primary"><%= title %></h6>
                     </div>
                     <div class="card-body">
-                        <% if(error.length !== 0){ %>
-                            <div style="text-align: center; margin: 10px 0;">
-                                <span style="background: red; font-size: 15px; color:white; padding: 5px 10px; border-radius: 5px;"><%= error %></span>
-                            </div>
-                        <% } %>
-                        <% if(success.length !== 0){ %>
-                            <div style="text-align: center; margin: 10px 0;">
-                                <span style="background: green; font-size: 15px; color:white; padding: 5px 10px; border-radius: 5px;"><%= success %></span>
-                            </div>
-                        <% } %>
+                        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+                        <% if(error.length !== 0){%>
+                            <script>
+                              Swal.fire(
+                                  'Thất bại!',
+                                  '<%= error %>',
+                                  'error'
+                              )
+                            </script>
+                          <% } %>
+                          <% if(success.length !== 0){ %>
+                            <script>
+                              Swal.fire(
+                                  'Thành công!',
+                                  '<%= success %>',
+                                  'success'
+                              )
+                            </script>
+                          <% } %>
                         <%- body %>
                     </div>
                 </div>
