--- a/views/static/layout/main.ejs
+++ b/views/static/layout/main.ejs
@@ -35,6 +35,25 @@
     <![endif]-->
   </head>
   <body>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <% if(error.length !== 0){%>
+      <script>
+        Swal.fire(
+            '<%= error %>',
+            '',
+            'error'
+        )
+      </script>
+    <% } %>
+    <% if(success.length !== 0){ %>
+      <script>
+        Swal.fire(
+            '<%= success %>',
+            '',
+            'success'
+        )
+      </script>
+    <% } %>
     <div class="header">
         <%- include('../component/header.ejs') -%>
     </div>
@@ -42,7 +61,7 @@
     <div class="nav-bar">
         <%- include('../component/nav-bar.ejs') -%>
     </div>
-
+    
     <%- body %>
     
     <div class="footer">
@@ -67,6 +86,7 @@
     
     <!-- Slider -->
     <script type="text/javascript" src="/static/js/bxslider.min.js"></script>
-	<script type="text/javascript" src="/static/js/script.slider.js"></script>
+	  <script type="text/javascript" src="/static/js/script.slider.js"></script>
+    
   </body>
 </html>
