--- a/views/admin/pages/category/add.ejs
+++ b/views/admin/pages/category/add.ejs
@@ -7,5 +7,6 @@
       <label class="form-label">Image</label>
       <input type="file" name="image" class="form-control">
     </div>
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     <button type="submit" class="btn btn-primary">Add</button>
 </form>
