--- a/views/admin/pages/product/add.ejs
+++ b/views/admin/pages/product/add.ejs
@@ -23,5 +23,6 @@
         <% }) %>
       </select>
     </div>
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     <button type="submit" class="btn btn-primary">Add</button>
 </form>
