--- a/views/admin/pages/product/edit.ejs
+++ b/views/admin/pages/product/edit.ejs
@@ -25,5 +25,6 @@
       <% }) %>
     </select>
   </div>
+  <input type="hidden" name="_csrf" value="<%= csrfToken %>">
   <button type="submit" class="btn btn-primary">Update</button>
 </form>
