--- a/views/static/component/header.ejs
+++ b/views/static/component/header.ejs
@@ -5,7 +5,7 @@
 				<div class="user-menu">
 					<ul>
 						<% if(user) { %>
-							<li><a href="#"><i class="fa fa-user"></i> <%= user.username %></a></li>
+							<li><a href="/profile"><i class="fa fa-user"></i> <%= user.username %></a></li>
 							<li><a href="/auth/logout"><i class="fa fa-sign-out" aria-hidden="true"></i>Logout</a></li>
 						<% } else { %>
 							<li><a href="/auth/login"><i class="fa fa-sign-in" aria-hidden="true"></i>Login</a></li>
