add module cart

--- a/views/static/index.ejs
+++ b/views/static/index.ejs
@@ -89,7 +89,7 @@
                             <div class="product-f-image">
                                 <img src="/<%= product.image %>" alt="">
                                 <div class="product-hover">
-                                    <a href="#" class="add-to-cart-link"><i class="fa fa-shopping-cart"></i> Add to cart</a>
+                                    <a href="cart/add" class="add-to-cart-link"><i class="fa fa-shopping-cart"></i> Add to cart</a>
                                     <a href="/product/<%= product.slug %>" class="view-details-link"><i class="fa fa-link"></i> See details</a>
                                 </div>
                             </div>
